refactor: migrate Yarn mappings to Mojmap and upgrade to 26.2